--- a/css/output.css
+++ b/css/output.css
@@ -1,14 +1,14 @@
 body {
   display: grid;
   justify-content: center;
-  margin: 0 150px 0 150px;
-  background-color: #344dbd;
+  background: linear-gradient(6deg, #3b6ffd 10%, #7b4bff 40%);
+  background-repeat: no-repeat;
+  height: 100vh;
 }
 
 h1, h2, p {
   display: grid;
   justify-content: center;
-  background-color: #b200f8;
 }
 
 /*# sourceMappingURL=output.css.map */
