--- a/sass/partials/_mixin.scss
+++ b/sass/partials/_mixin.scss
@@ -6,3 +6,9 @@
 @mixin margin {
     margin: 0 150px 0 150px;
 }
+
+@mixin background {
+    background: linear-gradient(6deg, #3b6ffd 10%, #7b4bff 40%);
+    background-repeat: no-repeat;
+    height: 100vh;
+}
