--- a/css/output.css
+++ b/css/output.css
@@ -4,6 +4,16 @@ body {
   background: linear-gradient(6deg, #3b6ffd 10%, #7b4bff 40%);
   background-repeat: no-repeat;
   height: 100vh;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+}
+
+.aboutBox {
+  display: grid;
+  justify-content: center;
+  width: 50%;
 }
 
 h1, h2, p {
