--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -7,6 +7,11 @@ body {
     @include mixin.background;
 }
 
+.aboutBox {
+    @include mixin.box;
+    width: 50%
+}
+
 h1, h2, p {
     @include mixin.flex;
 }
