--- a/sass/partials/_mixin.scss
+++ b/sass/partials/_mixin.scss
@@ -11,4 +11,13 @@
     background: linear-gradient(6deg, #3b6ffd 10%, #7b4bff 40%);
     background-repeat: no-repeat;
     height: 100vh;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    margin: 30px;
+}
+
+@mixin box {
+    display: grid;
+    justify-content: center;
 }
