--- a/sass/partials/_job.scss
+++ b/sass/partials/_job.scss
@@ -1,3 +1,9 @@
 @use 'variables';
 @use 'mixin';
-@use 'background';
+
+body {
+    @include mixin.background;
+    display: grid;
+    align-items: center;
+}
+
