--- a/css/output.css
+++ b/css/output.css
@@ -16,10 +16,16 @@ body {
   display: grid;
   justify-content: center;
   width: 50%;
+  margin: auto;
 }
 
 h1, h2, p {
   display: grid;
+  justify-content: center;
+}
+
+a {
+  display: flex;
   justify-content: center;
 }
 
