--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -1,4 +1,6 @@
 
 $hei: #b200f8;
 
+@import url('https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap');
 
+$font: 'Hina Mincho', serif;
